package org.command.demo1;

public interface Command {
    public void execute();
}
