package org.command.demo1;

public class Fan {
    public void open() {
        System.out.println("Fan is open.");
    }

    public void close() {
        System.out.println("Fan is closed.");
    }
}
