package org.command.demo1;

public class Light {
    public void open() {
        System.out.println("The light was opened.");
    }

    public void close() {
        System.out.println("The light was closed.");
    }
}
